--- a/index.html
+++ b/index.html
@@ -170,33 +170,22 @@ document.addEventListener('change', function(e) {
             renderProducts(storedProducts);
         }
 
-Function addNewProduct() {
-    const name = document.getElementById('admin-name').value;
-    const price = parseFloat(document.getElementById('admin-price').value);
-    const category = document.getElementById('admin-category').value;
 
-    if (name && price) {
-        const newP = { 
-            id: Date.now(), 
-            name: name, 
-            price: price, 
-            category: category, 
-            // Intha rendu varigalai thaan neenga maathanum
-            img: selectedImageData || "https://images.unsplash.com/photo-1584917865442-de89df76afd3?q=80&w=600", 
-            hoverImg: selectedImageData || "https://images.unsplash.com/photo-1584917865442-de89df76afd3?q=80&w=600" 
-        };
 
-        storedProducts.push(newP);
-        localStorage.setItem('luxe_inventory', JSON.stringify(storedProducts));
-        renderProducts(storedProducts);
-        
-        // Inputs-ai clear seiya
-        document.getElementById('admin-name').value = "";
-        document.getElementById('admin-price').value = "";
-        selectedImageData = ""; // Image data-vai reset seiya
-    }
-}
 
+            if (name && price) {
+                const newP = { id: Date.now(), name, price, category, img: "https://images.unsplash.com/photo-1584917865442-de89df76afd3?q=80&w=600", hoverImg: "https://images.unsplash.com/photo-1584917865442-de89df76afd3?q=80&w=600" };
+                storedProducts.push(newP);
+                localStorage.setItem('luxe_inventory', JSON.stringify(storedProducts));
+                renderProducts(storedProducts);
+                document.getElementById('admin-name').value = "";
+                document.getElementById('admin-price').value = "";
+            }
+        }
+        function addNewProduct() {
+            const name = document.getElementById('admin-name').value;
+            const price = parseFloat(document.getElementById('admin-price').value);
+            const category = document.getElementById('admin-category').value;
 
             if (name && price) {
                 const newP = { id: Date.now(), name, price, category, img: "https://images.unsplash.com/photo-1584917865442-de89df76afd3?q=80&w=600", hoverImg: "https://images.unsplash.com/photo-1584917865442-de89df76afd3?q=80&w=600" };
@@ -286,5 +275,6 @@ Function addNewProduct() {
     
 </body>
 </html>
+
 
 
